# test-phtree-cpp-bazel

./: .bazelrc  BUILD  MODULE.bazel
examples_long_dep/: BUILD
examples_short_dep/: BUILD
test/: BUILD
