module(
    name = "main",
    version = "",
)

# Bazel rules repositories.
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")

# Dependencies.
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "spdlog", version = "1.17.0")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "phtree-cpp", version = "1.7.0")

# Development environment tooling
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

BUILDIFIER_VERSION = "0.29.0"

#http_file(
#    name = "phtree-cpp",
#    sha256 = "4c985c883eafdde9c0e8cf3c8595b8bfdf32e77571c369bf8ddae83b042028d6",
#    urls = ["https://github.com/bazelbuild/buildtools/releases/download/{version}/buildifier".format(version = BUILDIFIER_VERSION)],
#)
#http_archive(
#    name = "phtree-cpp",
#    sha256 = "1a5aad3c465df2df8aa6b1d29b5eccaf619efd50a16f06bf4db1577746697803",
#    urls = ["https://github.com/tzaeschke/phtree-cpp/archive/refs/tags/v1.7.0.tar.gz"],
#)

# -- use_repo_rule statements -- #

# -- repo definitions -- #
